# launchpad_DdangHa

./: .env.example  .gitignore  Development Guide.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  package.json
apps/backend/: .env.example  Dockerfile  alembic.ini  env.example  env.test.example  main.py  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_create_users_table.py
apps/backend/app/application/: .gitkeep  __init__.py
apps/backend/app/application/auth/: __init__.py  dtos.py  services.py
apps/backend/app/auth/: __init__.py
apps/backend/app/auth/application/: __init__.py  dtos.py  services.py
apps/backend/app/auth/infrastructure/: __init__.py  jwt_handler.py
apps/backend/app/auth/interface/: __init__.py
apps/backend/app/domain/: __init__.py
apps/backend/app/domain/user/: __init__.py  entities.py  repository.py
apps/backend/app/infrastructure/: __init__.py
apps/backend/app/infrastructure/auth/: __init__.py
apps/backend/app/infrastructure/user/: __init__.py  models.py  repository.py
apps/backend/app/interface/: .gitkeep  __init__.py
apps/backend/app/shared/: __init__.py  database.py  exceptions.py  security.py  uid.py
apps/backend/app/user/: __init__.py
apps/backend/src/domain/: .gitkeep
apps/backend/src/infrastructure/: .gitkeep
apps/backend/tests/: .gitkeep  conftest.py  test_main.py
apps/backend/tests/integration/: __init__.py  conftest.py  test_api_standard_response.py  test_auth_signup.py
apps/backend/tests/unit/: __init__.py
docs/: architecture.md  (+4 more)
(+73 files in other folders)
